renaming the library into 'ocaml-js-video-players' in the 3.0 version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,9 +44,9 @@ jobs:
         with:
           ocaml-version: ${{ matrix.ocaml-version }}
 
-      - run: opam pin add video-players.dev . --no-action
+      - run: opam pin add js-video-players.dev . --no-action
 
-      - run: opam depext video-players --yes --with-doc --with-test
+      - run: opam depext js-video-players --yes --with-doc --with-test
 
       - run: opam install . --deps-only --with-doc --with-test
 
